# text-editor

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: events.rs  lib.rs  main.rs
crates/app/ui/: app.slint  chat.slint  components.slint  editor.slint  explorer.slint
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  document.rs  engine.rs  history.rs  keymap.rs  layout.rs  lib.rs  search.rs  selection.rs  text_shaping.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: highlight.rs  language.rs  lib.rs  parser.rs
crates/syntax/src/queries/: javascript.scm  rust.scm
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs  ops.rs  settings.rs  tree.rs  watcher.rs
