[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/core",
  "crates/workspace",
  "crates/editor",
  "crates/syntax",
  "crates/ai",
  "crates/diff",
  "crates/plugins",
]

 [profile.dev]
 opt-level = 0
 debug = true
 strip = "none"
 debug-assertions = true
 overflow-checks = true
 lto = false
 panic = "unwind"
 incremental = true
 codegen-units = 256
 rpath = false

 [profile.release]
 opt-level = 3
 debug = false
 strip = "none"
 debug-assertions = false
 overflow-checks = false
 lto = false
 panic = "unwind"
 incremental = false
 codegen-units = 16
 rpath = false
