[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
editor_core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
keyring = "3"
futures-util = "0.3"
