[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }
editor_core = { path = "../core" }
ai = { path = "../ai" }
tokio = { version = "1", features = ["rt-multi-thread"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
