[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
editor_core = { path = "../core" }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
ignore = "0.4"
